# easy-todo

./: index.html  package.json  pnpm-lock.yaml
src/: App.vue  style.css
src-tauri/: Cargo.toml  Tauri.macos.toml  Tauri.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/base/: errors.rs  mod.rs
src-tauri/src/commands/: mod.rs  todos.rs  user.rs
src-tauri/src/consts/: mod.rs
src-tauri/src/domain/: todo.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/listen/: mod.rs
src-tauri/src/model/: mod.rs  state.rs  store.rs  todo.rs
src-tauri/src/types/: mod.rs  state.rs
src-tauri/src/types/store/: mod.rs  settings.rs
src/components/: TodoItem.vue  TodoList.vue
