[package]
name = "easy-todo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



[dependencies]
tauri = { version = "2.9.5", features = ["config-toml"] }
tauri-plugin-opener = "2"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-store = "2"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono =  {version = "0.4.42", features = ["serde"] }
uuid = {version = "1", features = ["v4"] }


[build-dependencies]
tauri-build = { version = "2.5.3", features = ["config-toml"] }
