[package]
name = "easy-todo"
version = "0.1.0"
description = "A Tauri App"
authors = ["zero9501@outlook.com"]
license = ""
repository = ""
edition = "2024"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tauri = { version = "2.9.5", features = ["macos-private-api", "config-toml"] }
tauri-plugin-opener = "2"
# tauri-plugin-log = "2"
tauri-plugin-store = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = { version = "1" }
thiserror = { version = "2" }



[build-dependencies]
tauri-build = { version = "2.5.3", features = ["config-toml"] }
